Fixed spacing of columns on main display

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
 
 a {
   color: #7a9dc0;
+  color: #202124;
   text-decoration: none;
 }
 
@@ -33,6 +34,7 @@ p {
   text-align: center;
   text-transform: uppercase;
   margin: 0;
+  font-size: 14px;
 }
 
 img {
@@ -47,7 +49,7 @@ hr {
 }
 hr.current {
   max-width: 15%;
-  margin-top: 10px;
+  margin: 0 auto 10px;
 }
 
 p.current-temp-range {
@@ -90,6 +92,7 @@ p.current-temp-range {
 .current-specs {
   position: relative;
   top: 40px;
+  padding: 0;
 }
 
 .search-btn {
@@ -97,8 +100,7 @@ p.current-temp-range {
 }
 
 .main-display {
-  margin-top: 20px;
-  margin-left: 32px;
+  margin: 15px;
   margin-bottom: 0;
 }
 
